@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: MyPhysicsList.cc,v 1.1 1999-04-16 10:32:36 johna Exp $
+// $Id: MyPhysicsList.cc,v 1.2 1999-04-28 14:09:18 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -256,25 +256,13 @@ void MyPhysicsList::ConstructGeneral()
   }
 }
 
-void MyPhysicsList::SetCuts(G4double cut)
+void MyPhysicsList::SetCuts()
 {
   if (verboseLevel >0){
     G4cout << "MyPhysicsList::SetCuts:";
-    G4cout << "CutLength : " << cut/mm << " (mm)" << endl;
   }  
 
-  // set cut values for gamma at first and for e- second and next for e+,
-  // because some processes for e+/e- need cut values for gamma 
-  SetCutValue(cut, "gamma");
-  SetCutValue(cut, "e-");
-  SetCutValue(cut, "e+");
- 
-  // set cut values for proton and anti_proton before all other hadrons
-  // because some processes for hadrons need cut values for proton/anti_proton 
-  SetCutValue(cut, "proton");
-  SetCutValue(cut, "anti_proton");
-  
-  SetCutValueForOthers(cut);
+  SetCutsWithDefault();
 
   if (verboseLevel>1) {
     DumpCutValuesTable();
