@@ -1,4 +1,4 @@
-$Id: History,v 1.10 1999-04-19 01:18:25 johna Exp $
+$Id: History,v 1.11 1999-04-28 14:09:10 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,12 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+vis-01-00-09  28th April 1999  John Allison
+- Changes for UserAction classes.
+
+vis-01-00-08  John Allison
+- Changes by Paulo Mora de Freitas for decoupling vis from parameterisation.
 
 18th April 1999  John Allison
 - Added "defined" after || in VRML1(1)(File).hh.  (Some preprocessors
